package account.payment;

public class CashPayment extends Payment{
    public CashPayment(int money) {
        super(money);
    }
}
