@startuml

title __PARKINGLOT's Class Diagram__\n

  namespace account {
    class account.Account {
    }
  }
  

  namespace account {
    namespace payment {
      class account.payment.CashPayment {
      }
    }
  }
  

  namespace account {
    namespace payment {
      class account.payment.CreditPayment {
      }
    }
  }
  

  namespace account {
    namespace payment {
      abstract class account.payment.Payment {
      }
    }
  }
  

  namespace database {
    abstract class database.IDatabase {
    }
  }


  namespace database {
    class database.Database {
    }
  }


  namespace factory {
    class factory.ChargerFactory {
    }
  }


  namespace factory {
    class factory.ParkingLotFactory {
    }
  }


  namespace factory {
    class factory.ParkingLotMapFactory {
    }
  }


  namespace finance {
    abstract class finance.MoneyCharger {
    }
  }


  namespace finance {
    class finance.ParkingMoneyCharger {
    }
  }


  namespace parking {
    class parking.ParkingLot {
    }
  }


  namespace parking {
    namespace map {
      class parking.map.LinearParkingLotMap {
      }
    }
  }


  namespace parking {
    namespace map {
      abstract class parking.map.ParkingLotMap {
      }
    }
  }

  namespace spot {
    class spot.CompactSpot {
    }
  }


  namespace spot {
    class spot.DummySpot {
    }
  }


  namespace spot {
    class spot.LargeSpot {
    }
  }


  namespace spot {
    class spot.MotorbikeSpot {
    }
  }


  namespace spot {
    abstract class spot.Spot {
    }
  }


  namespace vehicle {
    class vehicle.Bike {
    }
  }


  namespace vehicle {
    class vehicle.Bus {
    }
  }


  namespace vehicle {
    class vehicle.Car {
    }
  }


  namespace vehicle {
    class vehicle.DummyVehicle {
    }
  }


  namespace vehicle {
    abstract class vehicle.Vehicle {
    }
  }


  account.Account o-- account.payment.Payment : payment
  account.payment.CashPayment -up-|> account.payment.Payment
  account.payment.CreditPayment -up-|> account.payment.Payment

  database.Database -up-|> database.IDatabase


  factory.ChargerFactory o-- database.IDatabase : db
  factory.ChargerFactory --> finance.MoneyCharger : create

  factory.ParkingLotFactory o-- factory.ChargerFactory : chargerFactory
  factory.ParkingLotFactory o-- factory.ParkingLotMapFactory : mapFactory

  factory.ParkingLotMapFactory o-- database.IDatabase : db
  factory.ParkingLotMapFactory --> parking.map.ParkingLotMap : create

  finance.ParkingMoneyCharger -up-|> finance.MoneyCharger
  finance.MoneyCharger --> account.Account : 1-*

  parking.ParkingLot o-- finance.MoneyCharger : charger
  parking.ParkingLot o-- parking.map.ParkingLotMap : parkingLotMap
  parking.map.LinearParkingLotMap -up-|> parking.map.ParkingLotMap
  parking.map.ParkingLotMap --> spot.Spot : 1-*


  spot.CompactSpot -up-|> spot.Spot
  spot.DummySpot -up-|> spot.Spot
  spot.LargeSpot -up-|> spot.Spot
  spot.MotorbikeSpot -up-|> spot.Spot
  spot.Spot o-- vehicle.Vehicle : vehicle
  vehicle.Bike -up-|> vehicle.Vehicle
  vehicle.Bus -up-|> vehicle.Vehicle
  vehicle.Car -up-|> vehicle.Vehicle
  vehicle.DummyVehicle -up-|> vehicle.Vehicle




right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml

